kubernetes/EKS-Deploy-Manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: staging

---
apiVersion: v1
kind: Namespace
metadata:
  name: production
